S2JMS-Serverでのコンテナの初期化をリフレクションに変更
git-svn-id: https://www.seasar.org/svn/s2jms/trunk@100 af07a43f-3802-0410-bdf4-81faf3a5335f